# theclonewars

./: .gitignore  AGENTS.md  BATTLE_SYSTEM_IMPLEMENTATION_PLAN.md  CLONE_WARS_WAR_SIM_MVP.md  FUTURE_PLAN.md  GRAND_STRATEGY_DESIGN.md  REACT_MIGRATION_PLAN.md  README.md  TODO.md  UI_OVERHAUL_PLAN.md  agents.md  clone  clone-react  pyproject.toml  requirements.txt
.codex/environments/: environment.toml
.cursor/: schism_cookie.txt
.cursor/plans/: coreworldsdrawerui_a90601c2.plan.md  threenodebarsintegration_a13b3343.plan.md
.hypothesis/constants/: 051e618c46d0fd7a  0c6092115a390e37  0f0e0ca342cf3c51  18ab17b62bec55ee  1adf4e8b79cbde2b  25037df37a3db818  26af8dbf8c7df48f  2c61515aa1f6e04b  395f84cf9365db02  3badf6e94c4ee2cf  3d31a776f663c65d  45ed5b49657bf9b7  48e5f0fb9ddb2b07  492a8af0c66a61b5  499cd3a78dd7d438  4a2d4be14bc93bb8  4a7a6e2c0ff5ff4d  4aec4d6252350f0c  4e0052fda44f2253  50f12127f3b890f8  578435133f0e814a  581bb57259b6b4fd  5a048b7cc32c52af  62f4c5383a47daab  62f5892af2dc7354  (+61 more)
sim-v2/: README.md  run_server.py
tests/: __init__.py  test_barracks.py  test_battle_sim.py  test_combat.py  test_console_flow.py  test_game_state_integration.py  test_logistics.py  test_logistics_comprehensive.py  test_logistics_routing.py  test_logistics_stress.py  test_logistics_v2.py  test_operation_resolver.py  test_phased_operations.py  test_production.py  test_production_comprehensive.py  test_raid_dynamics.py  test_resolver_determinism.py  test_rules.py  test_scenario.py  test_situation_map.py  test_trooper_tracking.py  test_ui_widgets.py  test_web_viewmodels.py
(+258 files in other folders)
