[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clone-wars-war-sim"
version = "0.0.1"
description = "Clone Wars War Sim MVP (terminal TUI)"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.50.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"clone_wars.data" = ["*.json"]
