[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-schism"
version = "0.0.1"
description = "The Schism — Strategic War Sim (terminal TUI)"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.50.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "watchfiles>=0.21.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"clone_wars.data" = ["*.json"]
"clone_wars.web" = ["templates/*.html", "templates/panels/*.html", "static/css/*.css"]
